<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5E1A5"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_sup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/descrpcion_img"
            android:scaleType="centerCrop"
            android:src="@drawable/img_ppal" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/texto_presentacion"
            android:textColor="#304FFE"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/texto_sub"
            android:textColor="#00B8D4"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_inf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_sup">

        <LinearLayout
            android:id="@+id/layout_botones1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_llamada"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_personalizado"
                android:drawableLeft="@drawable/phone_android_24"
                android:text="@string/texto_llamada" />

            <Button
                android:id="@+id/btn_alarma"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_personalizado"
                android:drawableLeft="@drawable/access_alarms_24"
                android:text="@string/texto_alarma" />

            <Button
                android:id="@+id/btn_url"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/boton_personalizado"
                android:drawableLeft="@drawable/baseline_web_24"
                android:text="@string/texto_url" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_botones2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_correo"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_personalizado"
                android:drawableLeft="@drawable/baseline_email_24"
                android:text="@string/texto_correo" />

            <Button
                android:id="@+id/btn_juegos"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_personalizado"
                android:drawableLeft="@drawable/baseline_games_24"
                android:text="@string/texto_juego" />

            <Button
                android:id="@+id/btn_apagar"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_personalizado"
                android:drawableLeft="@drawable/power_settings_24"
                android:text="@string/texto_apagar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_txt"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/texto_paisaje"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/img_second" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>